--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,36 @@
-# Dépendances principales (OBLIGATOIRES)
-# Compatible Python 3.13
+# Core dependencies
 fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-dotenv==1.0.1
+jinja2==3.1.4
+
+# RSS & Web scraping
 feedparser==6.0.11
 requests==2.32.3
 feedgen==1.0.0
-uvicorn[standard]==0.32.0
-markdown==3.7
-python-dotenv==1.0.1
 beautifulsoup4==4.12.3
 lxml==5.3.0
-jinja2==3.1.4
+markdown==3.7
+tldextract==5.3.1
 
-# Dépendances optionnelles (RECOMMANDÉES)
-# Pour anti-Cloudflare léger
+# Database (PostgreSQL)
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.13.0
+
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# Scheduling
+apscheduler==3.10.4
+
+# Optional fetchers
 cloudscraper==1.2.71
-
-# Pour anti-Cloudflare robuste (RECOMMANDÉ)
 playwright==1.48.0
 
-tldextract==5.3.1
+# Development
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
